css/style.css
html {height: 101%;}

body {
	font-family: arial;
	//margin: 0px; /* for IE6 / IE7 */
	//background-color: #F8F8F8 !important; /* e2e2e2 */
	background-image: url('images/whitenoise-361x370.png');
}

.container-other {
	max-width: 960px;
	margin: 0px auto;
	margin-top: 60px;
}
/* make left and right DIV container scrollable */
#right {
	/*  http://www.howtocreate.co.uk/tutorials/javascript/browserspecific (Element position with scrolling offsets)
	make sure that every element with an overflow of anything other than "visible" also has a position
	style set to something other than the default "static". This way, they will all appear in the offsetParent
	chain, and can be easily subtracted in the same loop that adds the offsetLeft and offsetTop. */
	//overflow: auto;
	position: relative;
	margin: auto;
	//max-width: 1600px;
	width: 100%;
	height:600px;
	/* make it visible */
	margin-top: 108px;
}

/* timetable */
#table2 {
	/* align table to the right */
	margin-left: -3px !important;
	//width: 430px;
}
.panel-fixed {
	margin-top: 52px;
	min-width: 1200px;
	left: 0;
	right: 0;
	border-color: #EEE !important;
	border-radius: 0px !important;
	//fborder-bottom: 6px solid #DDD !important;
	z-index: 99;
	position: fixed;
	-webkit-transform: translateZ(0);
}
.panel-fixed .panel-body {
	padding: 3px;
}

/* table cells */
.table1-header td, .table-container td, .table-temp td,
.table1-header th, .table-container th, .table-temp th
{ min-width: 70px; }

#right table td,th {
	border-style: double;
	height: 23px;
	text-align: center !important;
	font-size: 10pt;
	border-width: 0px 1px 1px 0px;
	border-color: #DDC5B5;
	font-weight: normal;
}

#table2 tbody td:hover {
	background-color: #EEDEEE;
}
/* last row and last column without border */
.noborder {
	border-width: 0px;
}

/* green objects */
.blue {
	border-style: none !important;
	height: 22px;
    z-index: 1 !important;
    position: absolute;
    margin-top: -11px;
    width: 69px;
}

.marked {
	border: 3px solid #000 !important;
	width: 69px;
	height: 22px;
	line-height: 13px !important;
}
.temp-marked {
	background-color: rgba(64, 149, 201, 0.25);
    position: absolute;
    width: 69px;
    height: 23px;
    margin-top: -12px;
    z-index: 3;
}
.free {
	background-color: #EEE;
}
.td-marked {
	background-color: #F27979 !important;
}
/* dark cells (first column and table header) */
.dark, .redips-mark {
	background-color: #e0e0e0;
	width: 65px;	
}
.today {
	-webkit-box-shadow: 1px 1px 4px 2px #C3E6FF;
	-moz-box-shadow: 1px 1px 4px 2px #C3E6FF;
	box-shadow: 1px 1px 4px 2px #C3E6FF;
}
.machine-row {
	background-color: #C3D8E8;
}
.table1-header{
	z-index: 8; 
	margin-left: -2px !important;
}
.datepick-popup {
	z-index: 10000 !important;
}
.left-header{
	float:left; 
	border-left: 7px solid #BBB;
	margin-top: 155px;
	position: fixed;
	z-index: 10;
	-webkit-transform: translateZ(0); 
}
.left-header th label, .left-header input[type=checkbox]{
	margin: 0px;
}
.table-container{
	float:left;
}
#leftUppercorner {
	width:69px; 
	height:47px; 
	background-color: #E0E0E0; 
	margin-top:108px; 
	border-top: 7px solid #5C98CC;
	border-left: 7px solid #BBB;
	position: fixed; 
	-webkit-transform: translateZ(0);
	z-index: 11;
}
#status {
	width: 100%;
	height: 15px;
	background-color: #DDD;
	margin-top: 93px;
	position: fixed;
	z-index: 12;
	-webkit-transform: translateZ(0);
}
#status div {
	font-size: 12px;
	margin-right: 10px;
	color: #555;
	float: right;
}
.day-td {
	background: -moz-linear-gradient(top, #3379b7 0%, #3379b7 0%, #639dcf 0%, #639dcf 0%, #3379b7 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, #3379b7), color-stop(0%, #3379b7), color-stop(0%, #639dcf), color-stop(0%, #639dcf), color-stop(100%, #3379b7));
	background: -webkit-linear-gradient(top, #3379b7 0%, #3379b7 0%, #639dcf 0%, #639dcf 0%, #3379b7 100%);
	background: -o-linear-gradient(top, #3379b7 0%, #3379b7 0%, #639dcf 0%, #639dcf 0%, #3379b7 100%);
	background: -ms-linear-gradient(top, #3379b7 0%, #3379b7 0%, #639dcf 0%, #639dcf 0%, #3379b7 100%);
	background: linear-gradient(to bottom, #3379b7 0%, #3379b7 0%, #639dcf 0%, #639dcf 0%, #3379b7 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3379b7', endColorstr='#3379b7', GradientType=0 );
	color: white !important;
	font-size: 12pt !important;
	font-weight: bold !important;
}
.blank {
	background-color: #E0E0E0 !important;
	border-color: #E0E0E0 !important;
}
.table1-header .header-time td{
	background-color: #CCC ;
}

.footer {
  //position: absolute;
  padding-top: 20px;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  //background-color: #F8F8F8;
  text-align: center;
  color: #A77F8B;
  //border-top: 1px solid #E7E7E7;
}

.container-fluid {
	background-color: white;
}
.page-date-header {
	text-align: center;
	background-color: #B5FFAB;
	font-size: 16px;
}
.modal-open {
    overflow: scroll !important;
}
#marked-modal .modal-dialog {
	width: 150px !important;
}
#marked-modal .modal-content{
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none; 
	border-radius: 2px;
	border: 1px solid #777;
}
#marked-modal .modal-dialog, #error-modal .modal-dialog {
    margin-top: 0% !important;
    float: left !important;
}
#marked-modal .modal-body{
	padding: 0px;
}
#marked-modal .btn {
	border-radius: 0px;
	border-width: 1px;
}
#calendarTable, #productsTable {
	max-width: 960px;
	margin: 0px auto;
}
#calendarTable td, #productsTable td, #productsInfoTable td, #produceTable td{
	padding: 0px;
    height: 30px;
    vertical-align: baseline;
}
#calendarTable thead th, #productsTable thead th, #productsInfoTable thead th{
	border-style: inherit;
	//border-color: #ccc;
}
#calendarTable .checkbox { margin-top: 0px; margin-bottom: 0px;}
#productsTable td, #productsInfoTable td, #produceTable td {text-align: center;}
#productsTable button {margin: 0px !important;}
#productModal .checkbox { margin-top: 0px; margin-bottom: 0px;}
/* ... */

